@@ -1,5 +1,5 @@
 #
-# $Id: svctool.in,v 2.679 2023-04-21 11:57:10+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.680 2023-04-21 18:07:54+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -26,7 +26,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.679 2023-04-21 11:57:10+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.680 2023-04-21 18:07:54+05:30 Cprogrammer Exp mbhangui $"
 
 #
 # End of User Configuration
@@ -4982,8 +4982,8 @@ fi
 /usr/bin/openssl rsa -in private_key.pem -pubout -out public_key.pem
 $chown mysql:indimail $ca_path/ca-key.pem $ca_path/ca.pem server-key.pem server-cert.pem \
 	client-key.pem client-cert.pem private_key.pem public_key.pem
-/bin/chmod 600 $ca_path/ca-key.pem client-key.pem private_key.pem server-key.pem
-/bin/chmod 640 client-cert.pem server-cert.pem $ca_path/ca.pem
+/bin/chmod 600 $ca_path/ca-key.pem private_key.pem server-key.pem
+/bin/chmod 640 client-cert.pem client-key.pem server-cert.pem $ca_path/ca.pem
 /bin/chmod 644 public_key.pem
 /bin/rm -f $ca_path/ca-req.pem server-req.pem client-req.pem
 echo ""
@@ -5053,11 +5053,11 @@ set_mysql_ssl_permission()
 	do
 		$chown mysql:indimail $ssl_dir/$i
 	done
-	for i in ca-key.pem client-key.pem private_key.pem server-key.pem
+	for i in ca-key.pem private_key.pem server-key.pem
 	do
 		/bin/chmod 600 $ssl_dir/$i
 	done
-	for i in client-cert.pem server-cert.pem ca.pem
+	for i in client-cert.pem client-key.pem server-cert.pem ca.pem
 	do
 		/bin/chmod 640 $ssl_dir/$i
 	done
