@@ -179,6 +179,7 @@ multi-signature generation
     service
 102.svctool: reduce wait time for mysql service for pwdlookup, inlookup
     service
+103.svctool: set client-key permission to 640 for mariadb
 
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.2-1.1%{?dist}
 Release 3.0.2-1.1 Start 08/09/2022 End 30/11/2023
